Fixed several contrast / accessibility issues.

--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -2,7 +2,7 @@
   max-width: 1160px !important;
   margin: auto !important;
   font-size: large;
-  color: gray;
+  color: rgb(70, 70, 70);
 }
 
 .footer-section {
