--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -15,6 +15,11 @@
   font-size: 1.1rem !important;
 }
 
+.nav-link {
+  color: #3b71ca !important;
+}
+
+
 .brain-image {
   margin-right: 1rem;
 }
